# wasmtime

./: Cargo.toml
.github/workflows/: main.yml
cranelift/assembler/: .rustfmt.toml  Cargo.toml  README.md  build.rs
cranelift/assembler/fuzz/: Cargo.toml
cranelift/assembler/fuzz/fuzz_targets/: roundtrip.rs
cranelift/assembler/meta/: Cargo.toml  README.md
cranelift/assembler/meta/src/: dsl.rs  generate.rs  instructions.rs  lib.rs  main.rs
cranelift/assembler/meta/src/dsl/: encoding.rs  features.rs  format.rs
cranelift/assembler/meta/src/generate/: features.rs  format.rs  formatter.rs  inst.rs  operand.rs
cranelift/assembler/meta/src/instructions/: and.rs  or.rs
cranelift/assembler/src/: alloc.rs  api.rs  feat.rs  fuzz.rs  gen.rs  imm.rs  lib.rs  main.rs  mem.rs  reg.rs  rex.rs  sink.rs
cranelift/codegen/: Cargo.toml
cranelift/codegen/meta/: Cargo.toml
cranelift/codegen/meta/src/: isle.rs
cranelift/codegen/src/ir/: memflags.rs
cranelift/codegen/src/isa/x64/: inst.isle  pcc.rs
cranelift/codegen/src/machinst/: buffer.rs  lower.rs
crates/wasi-http/src/: body.rs  http_impl.rs  lib.rs  types.rs  types_impl.rs
crates/wasi/src/preview2/: command.rs  ctx.rs  ip_name_lookup.rs  mod.rs  poll.rs  preview0.rs  preview1.rs  stdio.rs  tcp.rs
crates/wasi/src/preview2/host/: clocks.rs  env.rs  exit.rs  filesystem.rs  instance_network.rs  io.rs  network.rs  random.rs  tcp.rs  tcp_create_socket.rs  udp.rs  udp_create_socket.rs
crates/wit-bindgen/src/: lib.rs
src/: common.rs
src/commands/: run.rs  serve.rs
src/commands/run/: legacy.rs
(+9 files in other folders)
